# pyalterable

./: .gitignore  README.md  alter.yaml  pyproject.toml  test_fail.yml
example/: example_plugin.py  index.html
example/subdir/: test3.html
src/alterable/: __init__.py  __main__.py  alter.schema.json  alterable.py  build.py  util.py
src/alterable/api/: plugin.py
src/alterable/buildsystem/: cli.py  configloader.py  resolves.py  runner.py
src/alterable/contrib/: __init__.py  parse_html.py
src/alterable/contrib_plugins/: __init__.py  file_context_debugger.py  parse_html.py
src/alterable/plugins/: prepare.py  shared_context.py  structure.py
