[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alterable"
version = "0.0.1"
authors = [
    { name = "PenguinEncounter", email = "penguinencounter2+pypi01@gmail.com" }
]
description = "Bulk file processing with Python and StrictYAML"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
dependencies = [
    "strictyaml >= 1.7.3",
    "rich ~= 13.7.0"
]

[project.urls]
Homepage = "https://github.com/penguinencounter/pyalterable"
